--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/helpFragment"
         android:title="@string/help_fragment"
+        android:label="Help"
         android:icon="@drawable/baseline_question_mark_24"
+        app:showAsAction="always"
         >
     </item>
 </menu>
