--- a/app/src/main/res/layout/fragment_ho_so_benh_an.xml
+++ b/app/src/main/res/layout/fragment_ho_so_benh_an.xml
@@ -3,4 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.HoSoBenhAnFragment"/>
+    tools:context=".ui.fragment.HoSoBenhAnFragment">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hồ sơ bệnh án"
+    />
+</FrameLayout>
