--- a/app/src/main/res/layout/fragment_to_dieu_tri.xml
+++ b/app/src/main/res/layout/fragment_to_dieu_tri.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:inputType="date"
             android:enabled="false"
-            android:text="essssssssssssssssssssssssssssssssss"
+            android:text="ess"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
