--- a/app/src/main/res/layout/fragment_feature.xml
+++ b/app/src/main/res/layout/fragment_feature.xml
@@ -8,13 +8,18 @@
             name="navigateTo"
             type="vn.bvntp.app.ui.fragment.FeatureFragment" />
     </data>
-    
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/helpFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="700dp"
+    android:minHeight="2000dp"
     android:orientation="vertical"
     tools:context=".ui.fragment.HelpFragment">
 
@@ -54,8 +59,7 @@
         app:cardElevation="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
-        <!--            android:onClick="@{()-> navigateTo.goToFeature(@string/to_dieu_tri)}"-->
-        <!--            >-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -125,4 +129,6 @@
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 </layout>
