--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,20 +20,21 @@
         android:label="@string/thong_tin_benh_vien"
         tools:layout="@layout/fragment_feature" >
         <action
-            android:id="@+id/action_featureFragment_to_toDieuTriFragment"
-            app:enterAnim="@animator/slide_in_right"
-            app:exitAnim="@animator/slide_out_left"
-            app:popEnterAnim="@animator/slide_in_left"
-            app:popExitAnim="@animator/slide_in_right"
-            app:destination="@id/toDieuTriFragment" />
-        <action
             android:id="@+id/action_featureFragment_to_hoSoBenhAnFragment"
             app:destination="@id/hoSoBenhAnFragment" />
+        <action
+            android:id="@+id/action_featureFragment_to_danhSachToDieuTriFragment"
+            app:destination="@id/danhSachToDieuTriFragment" />
     </fragment>
     <fragment
         android:id="@+id/hoSoBenhAnFragment"
         android:name="vn.bvntp.app.ui.fragment.HoSoBenhAnFragment"
         android:label="@string/ho_so_benh_an"
         tools:layout="@layout/fragment_ho_so_benh_an" />
+    <fragment
+        android:id="@+id/danhSachToDieuTriFragment"
+        android:name="vn.bvntp.app.ui.fragment.DanhSachToDieuTriFragment"
+        android:label="@string/danh_sach_to_dieu_tri"
+        tools:layout="@layout/fragment_danh_sach_to_dieu_tri" />
 
 </navigation>
